--- a/app/src/main/res/layout/culturas_fragment.xml
+++ b/app/src/main/res/layout/culturas_fragment.xml
@@ -44,6 +44,21 @@
             android:layout_gravity="center"
             android:textAlignment="center"
             tools:listitem="@layout/recycler_view_item" />
+
+        <Space
+            android:layout_width="336dp"
+            android:layout_height="53dp" />
+
+        <TextView
+            android:id="@+id/tvFrase"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fraseCultures"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
